--- a/src/components/nav/Nav.module.css
+++ b/src/components/nav/Nav.module.css
@@ -1,7 +1,7 @@
 
 /*navcontent holds the navbeam(forms the navbar shape) and the navigation(buttons etc.)container*/
 .navcontainer {
-    width: 100%;
+    width: 100vw;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -76,10 +76,8 @@
 }
 
 
-
-
 /*styling the input buttons*/
-#searchmovie-input
+#searchmovieinput
 {
     height: 25px;
     border:none;
@@ -92,8 +90,6 @@
     display: flex;
     flex-direction: row;
 }
-
-
 
 /*general styling buttons*/
 .navbutton{
@@ -111,7 +107,7 @@
    color: #f6eab1;
 }
 
-.searchbutton{
+.navbutton.searchbutton{
     border-radius: 0px 6px 6px 0px;
 }
 
@@ -145,19 +141,19 @@
     bottom: 6px;
 }
 /*buttontext*/
-.buttontext-span{
+.buttontextspan{
     font-size: 0.9rem;
     position: relative;
     bottom: 6px;
 }
 
-.buttontext-span.logouttext, .buttontext-span.myprofiletext, .buttontext-span.logintext,.buttontext-span.signuptext{
+.buttontextspan.logouttext, .buttontextspan.myprofiletext, .buttontextspan.logintext,.buttontextspan.signuptext{
     font-size: 0.9rem;
     position: relative;
     bottom: 12px;
 }
 
-.buttontext-span.logintext{
+.buttontextspan.logintext{
     font-size: 0.9rem;
     position: relative;
     bottom: 9px;
