reviews can be added and updated

--- a/src/components/nav/Nav.css
+++ b/src/components/nav/Nav.css
@@ -46,9 +46,13 @@
 
 
 /*logo in the nav*/
-.logonav {
+.linklogonav {
     margin-top: 6px;
     position: absolute;
+    z-index: 2;
+}
+
+.logonav {
     z-index: 1;
 }
 
